@@ -1,5 +1,8 @@
 2009-07-23  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/i386/makecontext.S: Ensure we preserve the
+	stack alignment in the exit code.
+
 	* elf/dl-lookup.c (dl_lookup_x): The hashval for unique symbol can
 	potentially be zero.
 
